name:                hasktorch
version:             0.2.0.0
synopsis:            initial implementation for hasktorch based on libtorch
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2019 Austin Huang
category:            Codegen
build-type:          Custom
cabal-version:       1.24

custom-setup
  setup-depends:
      base >= 4.9 && < 5
    , Cabal
    , cabal-doctest >=1.0.6 && <1.1

Flag disable-doctest
 Description: Disable doctest. ToDo: This flag is to avoid relocation-error of ghci for macos.
 Default:     False
 Manual:      True

library
 exposed-modules:     Torch.GraduallyTyped
                    , Torch.GraduallyTyped.Prelude
                    , Torch.GraduallyTyped.Unify
                    , Torch.GraduallyTyped.Scalar
                    , Torch.GraduallyTyped.Tensor
                    , Torch.GraduallyTyped.Tensor.Type
                    , Torch.GraduallyTyped.Tensor.Creation
                    , Torch.GraduallyTyped.Tensor.IndexingSlicingJoining
                    , Torch.GraduallyTyped.Tensor.Other
                    , Torch.GraduallyTyped.Tensor.MathOperations
                    , Torch.GraduallyTyped.Tensor.MathOperations.Pointwise
                    , Torch.GraduallyTyped.Tensor.MathOperations.Reduction
                    , Torch.GraduallyTyped.Tensor.MathOperations.Comparison
                    , Torch.GraduallyTyped.Tensor.MathOperations.Spectral
                    , Torch.GraduallyTyped.Tensor.MathOperations.Other
                    , Torch.GraduallyTyped.Tensor.MathOperations.BlasLapack
                    , Torch.GraduallyTyped.RequiresGradient
                    , Torch.GraduallyTyped.DType
                    , Torch.GraduallyTyped.Device
                    , Torch.GraduallyTyped.Shape
                    , Torch.GraduallyTyped.Shape.Type
                    , Torch.GraduallyTyped.Shape.Class
                    , Torch.GraduallyTyped.Layout
                    , Torch.GraduallyTyped.Autograd
                    , Torch.GraduallyTyped.Random
                    , Torch.GraduallyTyped.NN
                    , Torch.GraduallyTyped.NN.Type
                    , Torch.GraduallyTyped.NN.Class
                    , Torch.GraduallyTyped.NN.Initialization
                    , Torch.GraduallyTyped.NN.Linear
                    , Torch.GraduallyTyped.NN.Transformer
                    , Torch.GraduallyTyped.NN.Transformer.Type
                    , Torch.GraduallyTyped.NN.Transformer.Block
                    , Torch.GraduallyTyped.NN.Transformer.CrossAttention
                    , Torch.GraduallyTyped.NN.Transformer.Decoder
                    , Torch.GraduallyTyped.NN.Transformer.DecoderBlock
                    , Torch.GraduallyTyped.NN.Transformer.DecoderStack
                    , Torch.GraduallyTyped.NN.Transformer.Encoder
                    , Torch.GraduallyTyped.NN.Transformer.FeedForwardNetwork
                    , Torch.GraduallyTyped.NN.Transformer.MultiHeadAttention
                    , Torch.GraduallyTyped.NN.Transformer.SelfAttention
                    , Torch.GraduallyTyped.NN.Transformer.SequenceToSequence
                    , Torch.GraduallyTyped.NN.Transformer.Stack
                    , Torch.GraduallyTyped.NN.Transformer.T5.Common
                    , Torch.GraduallyTyped.NN.Transformer.T5.Small
                    , Torch.GraduallyTyped.NN.Transformer.T5.Base
                    , Torch.GraduallyTyped.NN.Transformer.T5.Large
                    , Torch.GraduallyTyped.NN.Transformer.T5.ThreeB
                    , Torch.GraduallyTyped.NN.Transformer.T5.ElevenB
                    , Torch.GraduallyTyped.NN.Transformer.T5.Generation
                    , Torch.GraduallyTyped.NN.Transformer.T5.Vocab
                    , Torch.GraduallyTyped.NN.Transformer.T5
                    , Torch.GraduallyTyped.NN.Transformer.BERT.Common
                    , Torch.GraduallyTyped.NN.Transformer.BERT.BaseUncased
                    , Torch.GraduallyTyped.NN.Transformer.BERT
                    , Torch.GraduallyTyped.NN.Transformer.Pegasus.Common
                    , Torch.GraduallyTyped.NN.Transformer.Pegasus.XSum
                    , Torch.GraduallyTyped.NN.Transformer.Pegasus
                    , Torch.GraduallyTyped.NN.Dropout
                    , Torch.GraduallyTyped.NN.Activation
                    , Torch.GraduallyTyped.NN.Normalization
                    , Torch.GraduallyTyped.NN.Sparse
                    , Torch.GraduallyTyped.NN.Functional
                    , Torch.GraduallyTyped.NN.Functional.Activation
                    , Torch.GraduallyTyped.NN.Functional.Linear
                    , Torch.GraduallyTyped.NN.Functional.NonLinearActivation
                    , Torch.GraduallyTyped.NN.Functional.Normalization
                    , Torch.GraduallyTyped.NN.Functional.Sparse
                    , Torch.GraduallyTyped.Internal.TensorOptions
                    , Torch.GraduallyTyped.Internal.Void
                    , Torch.GraduallyTyped.RewriteRules
                    , Torch
                    , Torch.Tensor
                    , Torch.TensorOptions
                    , Torch.DType
                    , Torch.Device
                    , Torch.TensorFactories
                    , Torch.Functional
                    , Torch.Functional.Internal
                    , Torch.Initializers
                    , Torch.Autograd
                    , Torch.Optim
                    , Torch.Optim.CppOptim
                    , Torch.Vision
                    , Torch.NN
                    , Torch.NN.Recurrent.Cell.Elman
                    , Torch.NN.Recurrent.Cell.GRU
                    , Torch.NN.Recurrent.Cell.LSTM
                    , Torch.Scalar
                    , Torch.Backend
                    , Torch.Layout
                    , Torch.Cast
                    , Torch.Dimname
                    , Torch.Serialize
                    , Torch.Random
                    , Torch.Script
                    , Torch.HList
                    , Torch.Lens
                    , Torch.Typed
                    , Torch.Typed.Aux
                    , Torch.Typed.Factories
                    , Torch.Typed.Functional
                    , Torch.Typed.NN
                    , Torch.Typed.NN.Convolution
                    , Torch.Typed.NN.Normalization
                    , Torch.Typed.NN.Recurrent
                    , Torch.Typed.NN.Recurrent.Aux
                    , Torch.Typed.NN.Recurrent.Cell.LSTM
                    , Torch.Typed.NN.Recurrent.Cell.GRU
                    , Torch.Typed.NN.Recurrent.LSTM
                    , Torch.Typed.NN.Recurrent.GRU
                    , Torch.Typed.NN.Transformer
                    , Torch.Typed.NN.Linear
                    , Torch.Typed.NN.Dropout
                    , Torch.Typed.NN.Sparse
                    , Torch.Typed.NN.DataParallel
                    , Torch.Typed.Tensor
                    , Torch.Typed.Parameter
                    , Torch.Typed.Device
                    , Torch.Typed.DType
                    , Torch.Typed.Autograd
                    , Torch.Typed.Optim
                    , Torch.Typed.Optim.CppOptim
                    , Torch.Typed.Serialize
                    , Torch.Typed.Vision
                    , Torch.Distributions.Constraints
                    , Torch.Distributions.Distribution
                    , Torch.Distributions.Bernoulli
                    , Torch.Distributions.Categorical
                    , Torch.Data
                    , Torch.Data.Pipeline
                    , Torch.Data.StreamedPipeline
                    , Torch.Data.Utils
                    , Torch.Data.Internal
                    , Torch.Data.Dataset
                    , Torch.Data.CsvDatastream
                    , Torch.Data.Parser
                    , Torch.Language
                    , Torch.Language.SpiderSQL
 other-modules:       Paths_hasktorch
 hs-source-dirs:      src
 default-language:    Haskell2010
 ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
 build-depends:       async
                    , base >= 4.7 && < 5
                    , libtorch-ffi == 1.8.*
                    , finite-typelits
                    , ghc-typelits-extra
                    , ghc-typelits-knownnat
                    , ghc-typelits-natnormalise
                    , typelevel-rewrite-rules
                    , mtl
                    , safe-exceptions
                    , random
                    , reflection
                    , stm
                    , JuicyPixels
                    , vector
                    , bytestring
                    , safe-exceptions
                    , zlib >= 0.6
                    , pipes >= 4.3
                    , pipes-group
                    , pipes-concurrency
                    , pipes-safe
                    , pipes-bytestring
                    , pipes-csv
                    , lens-family-core
                    , generic-lens
                    , cassava
                    , lifted-async
                    , monad-control
                    , foldl
                    , transformers-base
                    , array
                    , data-default-class
                    , containers
                    , inline-c
                    , generics-sop
                    , type-errors-pretty
                    , vector-sized
                    , indexed
                    , indexed-extras
                    , free
                    , logict
                    , parsers
                    , singletons < 3
                    , HUnit
                    , HUnit-approx
 default-extensions:  Strict
                    , StrictData

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      FactorySpec
                    , FunctionalSpec
                    , GradSpec
                    , InitializerSpec
                    , LensSpec
                    , OptimSpec
                    , SparseSpec
                    , ScriptSpec
                    , TensorSpec
                    , NNSpec
                    , DimnameSpec
                    , PipelineSpec
                    , Torch.Typed.AuxSpec
                    , Torch.Typed.TensorSpec0
                    , Torch.Typed.TensorSpec1
                    , Torch.Typed.FactoriesSpec
                    , Torch.Typed.FunctionalSpec0
                    , Torch.Typed.FunctionalSpec1
                    , Torch.Typed.FunctionalSpec2
                    , Torch.Typed.AutogradSpec
                    , Torch.Typed.OptimSpec
                    , Torch.Typed.NNSpec
                    , Torch.Typed.NN.Recurrent.LSTMSpec
                    , Torch.Typed.NN.Recurrent.GRUSpec
                    , Torch.Typed.NN.Recurrent.Cell.LSTMSpec
                    , Torch.Typed.NN.Recurrent.Cell.GRUSpec
                    , Torch.Typed.NN.TransformerSpec
                    , Torch.Typed.VisionSpec
                    , SerializeSpec
                    , RandomSpec
                    , VisionSpec
                    , Torch.Distributions.ConstraintsSpec
                    , Torch.Distributions.BernoulliSpec
                    , Torch.Distributions.CategoricalSpec
  default-language: Haskell2010
  ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
  build-depends:      base >= 4.7 && < 5
                    , ghc-typelits-extra
                    , ghc-typelits-knownnat
                    , ghc-typelits-natnormalise
                    , hasktorch
                    , hspec
                    , libtorch-ffi
                    , mtl
                    , reflection
                    , safe-exceptions
                    , QuickCheck
                    , directory
                    , JuicyPixels
                    , inline-c-cpp
                    , async
                    , pipes
                    , random

  build-tool-depends:  hspec-discover:hspec-discover

test-suite doctests
  if os(darwin) || flag(disable-doctest)
    Buildable: False
  else
    Buildable: True
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            doctests.hs
  ghc-options:        -Wall -threaded -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
  default-language:   Haskell2010
  build-depends:      doctest >=0.16.0.1 && <0.17
                    , async
                    , base >= 4.7 && < 5
                    , libtorch-ffi == 1.8.*
                    , finite-typelits
                    , ghc-typelits-extra
                    , ghc-typelits-knownnat
                    , ghc-typelits-natnormalise
                    , mtl
                    , safe-exceptions
                    , random
                    , reflection
                    , stm
                    , JuicyPixels
                    , vector
                    , bytestring
                    , safe-exceptions
                    , zlib >= 0.6
                    , inline-c
                    , hasktorch
