name:                hasktorch
version:             0.2.0.0
synopsis:            Functional differentiable programming in Haskell
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD3
author:              Hasktorch Contributor Team
maintainer:          hasktorch@gmail.com
copyright:           2019 Austin Huang
category:            Codegen
build-type:          Custom
cabal-version:       1.24

custom-setup
  setup-depends:
      base >= 4.9 && < 5
    , Cabal
    , cabal-doctest >=1.0.9 && <1.1

Flag disable-doctest
 Description: Disable doctest. ToDo: This flag is to avoid relocation-error of ghci for macos.
 Default:     False
 Manual:      True

library
 exposed-modules:     Torch
                    , Torch.Tensor
                    , Torch.TensorOptions
                    , Torch.DType
                    , Torch.Device
                    , Torch.TensorFactories
                    , Torch.Functional
                    , Torch.Functional.Internal
                    , Torch.Initializers
                    , Torch.Autograd
                    , Torch.Optim
                    , Torch.Optim.CppOptim
                    , Torch.Vision
                    , Torch.NN
                    , Torch.NN.Recurrent.Cell.Elman
                    , Torch.NN.Recurrent.Cell.GRU
                    , Torch.NN.Recurrent.Cell.LSTM
                    , Torch.Scalar
                    , Torch.Backend
                    , Torch.Layout
                    , Torch.Cast
                    , Torch.Dimname
                    , Torch.Serialize
                    , Torch.Random
                    , Torch.Script
                    , Torch.HList
                    , Torch.Lens
                    , Torch.Typed
                    , Torch.Typed.Auxiliary
                    , Torch.Typed.Factories
                    , Torch.Typed.Functional
                    , Torch.Typed.NN
                    , Torch.Typed.NN.Convolution
                    , Torch.Typed.NN.Normalization
                    , Torch.Typed.NN.Recurrent
                    , Torch.Typed.NN.Recurrent.Auxiliary
                    , Torch.Typed.NN.Recurrent.Cell.LSTM
                    , Torch.Typed.NN.Recurrent.Cell.GRU
                    , Torch.Typed.NN.Recurrent.LSTM
                    , Torch.Typed.NN.Recurrent.GRU
                    , Torch.Typed.NN.Transformer
                    , Torch.Typed.NN.Linear
                    , Torch.Typed.NN.Dropout
                    , Torch.Typed.NN.Sparse
                    , Torch.Typed.NN.DataParallel
                    , Torch.Typed.Tensor
                    , Torch.Typed.Parameter
                    , Torch.Typed.Device
                    , Torch.Typed.DType
                    , Torch.Typed.Autograd
                    , Torch.Typed.Optim
                    , Torch.Typed.Optim.CppOptim
                    , Torch.Typed.Serialize
                    , Torch.Typed.Vision
                    , Torch.Typed.Lens
                    , Torch.Typed.NamedTensor
                    , Torch.Typed.VLTensor
                    , Torch.Distributions.Constraints
                    , Torch.Distributions.Distribution
                    , Torch.Distributions.Bernoulli
                    , Torch.Distributions.Categorical
                    , Torch.Data
                    , Torch.Data.Pipeline
                    , Torch.Data.StreamedPipeline
                    , Torch.Data.Utils
                    , Torch.Data.Internal
                    , Torch.Data.Dataset
                    , Torch.Data.CsvDatastream
                    , Torch.Tutorial
                    , Torch.Index
                    , Torch.Jit

 other-modules:       Paths_hasktorch
 hs-source-dirs:      src
 default-language:    Haskell2010
 ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0 -fplugin GHC.NotExport.Plugin
 build-depends:       async
                    , base >= 4.7 && < 5
                    , libtorch-ffi == 2.0.*
                    , libtorch-ffi-helper == 2.0.*
                    , finite-typelits
                    , ghc-typelits-extra
                    , ghc-typelits-knownnat
                    , ghc-typelits-natnormalise
                    , mtl
                    , safe-exceptions
                    , random
                    , reflection
                    , stm
                    , JuicyPixels
                    , vector
                    , bytestring
                    , safe-exceptions
                    , zlib >= 0.6
                    , pipes >= 4.3
                    , pipes-group
                    , pipes-concurrency
                    , pipes-safe
                    , pipes-bytestring
                    , pipes-csv
                    , lens-family-core
                    , cassava
                    , lifted-async
                    , monad-control
                    , foldl
                    , transformers-base
                    , array
                    , data-default-class
                    , containers
                    , inline-c
                    , vector-sized
                    , template-haskell
                    , megaparsec
                    , half
                    , constraints

 default-extensions:  Strict
                    , StrictData

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      FactorySpec
                    , FunctionalSpec
                    , GradSpec
                    , InitializerSpec
                    , LensSpec
                    , OptimSpec
                    , SparseSpec
                    , ScriptSpec
                    , TensorSpec
                    , NNSpec
                    , DimnameSpec
                    , PipelineSpec
                    , Torch.Typed.AuxiliarySpec
                    , Torch.Typed.TensorSpec0
                    , Torch.Typed.TensorSpec1
                    , Torch.Typed.FactoriesSpec
                    , Torch.Typed.FunctionalSpec0
                    , Torch.Typed.FunctionalSpec1
                    , Torch.Typed.FunctionalSpec2
                    , Torch.Typed.AutogradSpec
                    , Torch.Typed.OptimSpec
                    , Torch.Typed.NNSpec
                    , Torch.Typed.NN.Recurrent.LSTMSpec
                    , Torch.Typed.NN.Recurrent.GRUSpec
                    , Torch.Typed.NN.Recurrent.Cell.LSTMSpec
                    , Torch.Typed.NN.Recurrent.Cell.GRUSpec
                    , Torch.Typed.NN.TransformerSpec
                    , Torch.Typed.VisionSpec
                    , Torch.Typed.NamedTensorSpec
                    , SerializeSpec
                    , RandomSpec
                    , VisionSpec
                    , Torch.Distributions.ConstraintsSpec
                    , Torch.Distributions.BernoulliSpec
                    , Torch.Distributions.CategoricalSpec
                    , IndexSpec
  default-language: Haskell2010
  ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
  build-depends:      base
                    , ghc-typelits-extra
                    , ghc-typelits-knownnat
                    , ghc-typelits-natnormalise
                    , hasktorch
                    , hspec
                    , libtorch-ffi
                    , mtl
                    , reflection
                    , safe-exceptions
                    , QuickCheck
                    , directory
                    , JuicyPixels
                    , inline-c-cpp
                    , async
                    , pipes
                    , random
                    , vector-sized
                    , lens-family-core
                    , data-default-class
                    , half

test-suite doctests
  if os(darwin) || flag(disable-doctest)
    Buildable: False
  else
    Buildable: True
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            doctests.hs
  ghc-options:        -Wall -threaded -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
  default-language:   Haskell2010
  build-depends:      doctest >=0.16.0.1 && <0.23
                    , async
                    , base
                    , libtorch-ffi
                    , finite-typelits
                    , ghc-typelits-extra
                    , ghc-typelits-knownnat
                    , ghc-typelits-natnormalise
                    , mtl
                    , safe-exceptions
                    , random
                    , reflection
                    , stm
                    , JuicyPixels
                    , vector
                    , bytestring
                    , safe-exceptions
                    , zlib >= 0.6
                    , inline-c
                    , hasktorch

benchmark runtime
  type: exitcode-stdio-1.0
  main-is: Runtime.hs
  hs-source-dirs: bench
  build-depends:
      base
    , criterion
    , deepseq
    , hmatrix
    , mwc-random
    , vector
    , matrix
    , split
    , primitive
    , hasktorch
    , libtorch-ffi
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts


benchmark alloc
  type: exitcode-stdio-1.0
  main-is: Alloc.hs
  hs-source-dirs: bench
  build-depends:
      base
    , deepseq
    , hmatrix
    , mwc-random
    , vector
    , weigh
    , split
    , primitive
    , hasktorch
    , libtorch-ffi
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts
