name:           hasktorch-indef
version:        0.0.1.0
synopsis:       Torch for tensors and neural networks in Haskell
description:    core tensor abstractions wrapping raw TH bindings
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/hasktorch#readme
bug-reports:    https://github.com/hasktorch/hasktorch/issues
author:         Austin Huang
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

flag cuda
  Description: build with THC support
  Default: True

library
  signatures:
      Torch.Sig.Index.Tensor
    , Torch.Sig.Index.TensorFree
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: DataKinds, KindSignatures, TypeSynonymInstances
  build-depends:
      base >=4.7 && <5
    , backprop >= 0.2 && < 0.3
    , containers
    , deepseq >=1.3.0.0
    , dimensions >=0.3.2.0
    , hasktorch-dimensions
    , hasktorch-signatures
    , hasktorch-types-th
    , hasktorch-raw-th
    , managed >=1.0.0 && <1.1
    , microlens >=0.4.8.1
    , mtl
    , numeric-limits
    , safe-exceptions >=0.1.0.0
    , singletons >=2.4
    , ghc-typelits-natnormalise
    , transformers >= 0.5
    , text >=1.2.2.2
    , typelits-witnesses >=0.2.3.0

  if flag(cuda)
    build-depends:
      hasktorch-types-thc
    cpp-options: -DCUDA

  other-modules:
      Torch.Indef.Internal

  exposed-modules:
    -- classes implementations with indefinites

    -- FIXME: not sure where to go with commented-out classes, they are TH-only but there are some THC-only things as well
    -- , Torch.Class.Blas
    -- , Torch.Class.Lapack
    -- , Torch.Class.Tensor.Conv
    -- , Torch.Class.Vector

      Torch.Indef.Storage
    , Torch.Indef.Storage.Copy
    , Torch.Indef.Types
    , Torch.Indef.Index

    -- ==================================================== --
    -- Dynamic Tensor modules
    -- ==================================================== --
    , Torch.Indef.Dynamic
    , Torch.Indef.Dynamic.Tensor
    , Torch.Indef.Dynamic.Tensor.Copy
    , Torch.Indef.Dynamic.Tensor.Index
    , Torch.Indef.Dynamic.Tensor.Masked
    , Torch.Indef.Dynamic.Tensor.Math
    , Torch.Indef.Dynamic.Tensor.Math.Compare
    , Torch.Indef.Dynamic.Tensor.Math.CompareT
    , Torch.Indef.Dynamic.Tensor.Math.Pairwise
    , Torch.Indef.Dynamic.Tensor.Math.Pointwise
    , Torch.Indef.Dynamic.Tensor.Math.Reduce
    , Torch.Indef.Dynamic.Tensor.Math.Random.TH
    , Torch.Indef.Dynamic.Tensor.Math.Scan
    , Torch.Indef.Dynamic.Tensor.Mode
    , Torch.Indef.Dynamic.Tensor.Random.TH
    , Torch.Indef.Dynamic.Tensor.Random.THC
    , Torch.Indef.Dynamic.Tensor.ScatterGather
    , Torch.Indef.Dynamic.Tensor.Sort
    , Torch.Indef.Dynamic.Tensor.TopK

    , Torch.Indef.Dynamic.Tensor.Math.Pointwise.Signed

    , Torch.Indef.Dynamic.NN
    , Torch.Indef.Dynamic.Tensor.Math.Blas
    , Torch.Indef.Dynamic.Tensor.Math.Floating
    , Torch.Indef.Dynamic.Tensor.Math.Lapack
    , Torch.Indef.Dynamic.Tensor.Math.Pointwise.Floating
    , Torch.Indef.Dynamic.Tensor.Math.Reduce.Floating

    -- ==================================================== --
    -- Static Tensor modules
    -- ==================================================== --
    , Torch.Indef.Static
    , Torch.Indef.Static.Tensor
    , Torch.Indef.Static.Tensor.Copy
    , Torch.Indef.Static.Tensor.Index
    , Torch.Indef.Static.Tensor.Masked
    , Torch.Indef.Static.Tensor.Math
    , Torch.Indef.Static.Tensor.Math.Compare
    , Torch.Indef.Static.Tensor.Math.CompareT
    , Torch.Indef.Static.Tensor.Math.Pairwise
    , Torch.Indef.Static.Tensor.Math.Pointwise
    , Torch.Indef.Static.Tensor.Math.Random.TH
    , Torch.Indef.Static.Tensor.Math.Reduce
    , Torch.Indef.Static.Tensor.Math.Scan
    , Torch.Indef.Static.Tensor.Random.TH
    , Torch.Indef.Static.Tensor.Random.THC
    , Torch.Indef.Static.Tensor.Mode
    , Torch.Indef.Static.Tensor.ScatterGather
    , Torch.Indef.Static.Tensor.Sort
    , Torch.Indef.Static.Tensor.TopK

    , Torch.Indef.Static.Tensor.Math.Pointwise.Signed

    , Torch.Indef.Static.NN
    , Torch.Indef.Static.NN.Activation
    , Torch.Indef.Static.NN.Conv1d
    -- , Torch.Indef.Static.NN.Conv2d
    -- , Torch.Indef.Static.NN.Conv3d
    , Torch.Indef.Static.NN.Criterion
    , Torch.Indef.Static.NN.Layers
    , Torch.Indef.Static.NN.Math
    , Torch.Indef.Static.NN.Padding
    , Torch.Indef.Static.NN.Pooling
    , Torch.Indef.Static.NN.Sampling
    , Torch.Indef.Static.Tensor.Math.Blas
    , Torch.Indef.Static.Tensor.Math.Floating
    , Torch.Indef.Static.Tensor.Math.Lapack
    , Torch.Indef.Static.Tensor.Math.Pointwise.Floating
    , Torch.Indef.Static.Tensor.Math.Reduce.Floating


