name:           hasktorch-indef
version:        0.0.1.0
synopsis:       Torch for tensors and neural networks in Haskell
description:    core tensor abstractions wrapping raw TH bindings
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/hasktorch#readme
bug-reports:    https://github.com/hasktorch/hasktorch/issues
author:         Austin Huang
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

flag cuda
  Description: Unify with THC-based patches. Functionality is identical, but CPU-bound code should have better creation performance.
  Default: False

test-suite spec-double
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language: Haskell2010
  default-extensions: DataKinds, ScopedTypeVariables, FlexibleContexts
  hs-source-dirs: tests
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , hasktorch-indef
    , hspec >=2.4.4
    , singletons >= 2.4.1
    , text >=1.2.2.2
  other-modules:
      Torch.Indef.StorageSpec
  mixins:
      hasktorch-indef requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Double
        ,Torch.Sig.Storage        as Torch.FFI.TH.Double.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Double.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Double.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Double.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Double.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Double.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Double.TensorMath

        ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise.Floating as Torch.FFI.TH.Double.TensorMath

        ,Torch.Sig.Tensor.Math.Blas     as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Lapack   as Torch.FFI.TH.Double.TensorLapack
        ,Torch.Sig.Tensor.Math.Floating as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce.Floating as Torch.FFI.TH.Double.TensorMath

        ,Torch.Sig.Tensor.Math.Random.TH     as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Random.TH          as Torch.FFI.TH.Double.TensorRandom
        ,Torch.Sig.Tensor.Random.THC         as Torch.Undefined.Double.Tensor.Random.THC

        ,Torch.Sig.NN       as Torch.FFI.TH.NN.Double
        ,Torch.Sig.Types.NN as Torch.Types.TH
        ,Torch.Sig.Index.Tensor       as Torch.FFI.TH.Long.Tensor
        ,Torch.Sig.Index.TensorFree   as Torch.FFI.TH.Long.FreeTensor
        ,Torch.Sig.Mask.Tensor        as Torch.FFI.TH.Byte.Tensor
        ,Torch.Sig.Mask.TensorFree    as Torch.FFI.TH.Byte.FreeTensor
        ,Torch.Sig.Mask.MathReduce    as Torch.FFI.TH.Byte.TensorMath
        )




library
  signatures:
      Torch.Sig.Index.Tensor
    , Torch.Sig.Index.TensorFree
    , Torch.Sig.Mask.Tensor
    , Torch.Sig.Mask.TensorFree
    , Torch.Sig.Mask.MathReduce
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: DataKinds, KindSignatures, TypeSynonymInstances
  ghc-options: -Wno-deprecations
  build-depends:
      base >=4.7 && <5
    , backprop >= 0.2 && < 0.3
    , containers
    , deepseq >=1.3.0.0
    , dimensions >= 1.0
    , hasktorch-signatures
    , hasktorch-types-th
    , hasktorch-raw-th
    , managed >=1.0.0 && <1.1
    , microlens >=0.4.8.1
    , mtl
    , numeric-limits
    , safe-exceptions >=0.1.0.0
    , singletons >=2.2
    , ghc-typelits-natnormalise
    , transformers >= 0.5
    , text >=1.2.2.2
    , typelits-witnesses >=0.2.3.0

  if flag(cuda)
    cpp-options: -DCUDA
    build-depends:
        hasktorch-types-thc
      , cuda

  other-modules:
      Torch.Indef.Internal

  exposed-modules:
    -- FIXME: not sure where to go with commented-out classes, they are TH-only but there are some THC-only things as well
    -- , Torch.Class.Blas
    -- , Torch.Class.Lapack
    -- , Torch.Class.Tensor.Conv
    -- , Torch.Class.Vector

      Torch.Indef.Storage
    , Torch.Indef.Storage.Copy
    , Torch.Indef.Types
    -- , Torch.Indef.Index
    -- , Torch.Indef.Mask

    -- -- ==================================================== --
    -- -- Dynamic Tensor modules
    -- -- ==================================================== --
    -- , Torch.Indef.Dynamic.Tensor
    -- , Torch.Indef.Dynamic.Tensor.Copy
    -- , Torch.Indef.Dynamic.Tensor.Index
    -- , Torch.Indef.Dynamic.Tensor.Masked
    -- , Torch.Indef.Dynamic.Tensor.Math
    -- , Torch.Indef.Dynamic.Tensor.Math.Compare
    -- , Torch.Indef.Dynamic.Tensor.Math.CompareT
    -- , Torch.Indef.Dynamic.Tensor.Math.Pairwise
    -- , Torch.Indef.Dynamic.Tensor.Math.Pointwise
    -- , Torch.Indef.Dynamic.Tensor.Math.Reduce
    -- , Torch.Indef.Dynamic.Tensor.Math.Random.TH
    -- , Torch.Indef.Dynamic.Tensor.Math.Scan
    -- , Torch.Indef.Dynamic.Tensor.Mode
    -- , Torch.Indef.Dynamic.Tensor.Random.TH
    -- , Torch.Indef.Dynamic.Tensor.Random.THC
    -- , Torch.Indef.Dynamic.Tensor.ScatterGather
    -- , Torch.Indef.Dynamic.Tensor.Sort
    -- , Torch.Indef.Dynamic.Tensor.TopK

    -- , Torch.Indef.Dynamic.Tensor.Math.Pointwise.Signed

    -- , Torch.Indef.Dynamic.NN
    -- , Torch.Indef.Dynamic.NN.Activation
    -- , Torch.Indef.Dynamic.NN.Criterion
    -- , Torch.Indef.Dynamic.NN.Pooling
    -- , Torch.Indef.Dynamic.Tensor.Math.Blas
    -- , Torch.Indef.Dynamic.Tensor.Math.Floating
    -- , Torch.Indef.Dynamic.Tensor.Math.Lapack
    -- , Torch.Indef.Dynamic.Tensor.Math.Pointwise.Floating
    -- , Torch.Indef.Dynamic.Tensor.Math.Reduce.Floating

    -- -- ==================================================== --
    -- -- Static Tensor modules
    -- -- ==================================================== --
    -- , Torch.Indef.Static.Tensor
    -- , Torch.Indef.Static.Tensor.Copy
    -- , Torch.Indef.Static.Tensor.Index
    -- , Torch.Indef.Static.Tensor.Masked
    -- , Torch.Indef.Static.Tensor.Math
    -- , Torch.Indef.Static.Tensor.Math.Compare
    -- , Torch.Indef.Static.Tensor.Math.CompareT
    -- , Torch.Indef.Static.Tensor.Math.Pairwise
    -- , Torch.Indef.Static.Tensor.Math.Pointwise
    -- , Torch.Indef.Static.Tensor.Math.Random.TH
    -- , Torch.Indef.Static.Tensor.Math.Reduce
    -- , Torch.Indef.Static.Tensor.Math.Scan
    -- , Torch.Indef.Static.Tensor.Random.TH
    -- , Torch.Indef.Static.Tensor.Random.THC
    -- , Torch.Indef.Static.Tensor.Mode
    -- , Torch.Indef.Static.Tensor.ScatterGather
    -- , Torch.Indef.Static.Tensor.Sort
    -- , Torch.Indef.Static.Tensor.TopK

    -- , Torch.Indef.Static.Tensor.Math.Pointwise.Signed

    -- , Torch.Indef.Static.NN
    -- , Torch.Indef.Static.NN.Activation
    -- , Torch.Indef.Static.NN.Backprop
    -- , Torch.Indef.Static.NN.Conv1d
    -- , Torch.Indef.Static.NN.Conv2d
    -- -- , Torch.Indef.Static.NN.Conv3d
    -- , Torch.Indef.Static.NN.Criterion
    -- , Torch.Indef.Static.NN.Layers
    -- , Torch.Indef.Static.NN.Linear
    -- , Torch.Indef.Static.NN.Math
    -- , Torch.Indef.Static.NN.Padding
    -- , Torch.Indef.Static.NN.Pooling
    -- , Torch.Indef.Static.NN.Sampling
    -- , Torch.Indef.Static.Tensor.Math.Blas
    -- , Torch.Indef.Static.Tensor.Math.Floating
    -- , Torch.Indef.Static.Tensor.Math.Lapack
    -- , Torch.Indef.Static.Tensor.Math.Pointwise.Floating
    -- , Torch.Indef.Static.Tensor.Math.Reduce.Floating

